--- a/service/business/pom.xml
+++ b/service/business/pom.xml
@@ -3,27 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>keep-cloud</artifactId>
+        <artifactId>keep-cloud-service</artifactId>
         <groupId>cn.qidd</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>keep-cloud-eureka</artifactId>
-
-    <name>eureka</name>
-
-    <packaging>jar</packaging>
+    <artifactId>business</artifactId>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -41,7 +29,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>cn.qidd.keep.eureka.EurekaApplication</mainClass>
+                    <mainClass>cn.qidd.keep.business.BusinessApplication</mainClass>
                 </configuration>
                 <executions>
                     <execution>
