--- a/zuul/pom.xml
+++ b/zuul/pom.xml
@@ -40,6 +40,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>cn.qidd.keep.eureka.ZuulApplication</mainClass>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
