--- a/eureka/src/main/resources/config/application.yml
+++ b/eureka/src/main/resources/config/application.yml
@@ -1,10 +1,15 @@
 server:
-  port: 8761
+  port: 8766
 
 eureka:
+  instance:
+
   client:
     register-with-eureka: false
     fetch-registry: false
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+
 
 logging:
   level:
