--- a/service/business/src/main/resources/config/application.yml
+++ b/service/business/src/main/resources/config/application.yml
@@ -1,2 +1,16 @@
 server:
   port: 50001
+spring:
+  application:
+    name: service-business
+eureka:
+  client:
+    enabled: true
+    fetch-registry: false
+    service-url:
+      default-zone: http://localhost:8766/eureka/
+
+
+
+
+
