--- a/service/message/pom.xml
+++ b/service/message/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>message</artifactId>
+    <artifactId>keep-cloud-service-message</artifactId>
 
     <dependencies>
         <dependency>
