--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     </parent>
 
     <properties>
+        <springfox-swagger2.version>2.9.2</springfox-swagger2.version>
         <spring-boot.version>2.0.3.RELEASE</spring-boot.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
