--- a/service/message/src/main/resources/config/application.yml
+++ b/service/message/src/main/resources/config/application.yml
@@ -3,4 +3,11 @@ server:
 spring:
   application:
     name: service-message
+eureka:
+  instance:
+    instance-id: service-message
+  client:
+    enabled: true
+    default-zone: http://localhost:8761/eureka/
+
 
