--- a/service/business/src/main/resources/config/application.yml
+++ b/service/business/src/main/resources/config/application.yml
@@ -1,16 +1,8 @@
-server:
-  port: 50001
 spring:
   application:
     name: service-business
-eureka:
-  instance:
-    instance-id: service-business
-  client:
-    enabled: true
-    fetch-registry: false
-    service-url:
-      default-zone: http://localhost:8761/eureka/
+  profiles:
+    active: @spring.profiles.active@
 
 
 
