--- a/zuul/src/main/resources/config/application-dev.yml
+++ b/zuul/src/main/resources/config/application-dev.yml
@@ -11,8 +11,8 @@ eureka:
   client:
     service-url:
       default-zone: http://localhost:8761/eureka/
-
-logging:
-  config: logback-spring-test.xml
-  file: /keep-cloud/log/zuul.log
-    max-size: 50M
+#
+#logging:
+#  config: logback-spring.xml
+#  file: /keep-cloud/log/zuul.log
+#    max-size: 50M
