--- a/admin/src/main/resources/config/application.yml
+++ b/admin/src/main/resources/config/application.yml
@@ -1,11 +1,17 @@
 server:
-  port: 50001
+  port: 8762
+
 spring:
-  profiles:
-    active: dev
+  application:
+    name: admin
+#  boot:
+#    admin:
+#      client:
+#        url: "http://localhost:8762"
+#        enabled: true
+
 eureka:
   client:
-    registryFetchIntervalSeconds: 30
     service-url:
       default-zone: ${EUREKA_SERVICE_URL:http://localhost:8761}/eureka/
 
@@ -17,8 +23,3 @@ management:
   endpoint:
     health:
       show-details: ALWAYS
-
-
-
-
-
