--- a/eureka/src/main/resources/config/application-prod.yml
+++ b/eureka/src/main/resources/config/application-prod.yml
@@ -1,20 +1,33 @@
 server:
   port: 8761
+
+spring:
+  profiles:
+    active: prod
+  boot:
+    admin:
+      client:
+        url: "http://localhost:8762"
+        enabled: true
+
 eureka:
   client:
-    register-with-eureka: false
+    register-with-eureka: true
     fetch-registry: false
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: ${EUREKA_SERVICE_URL:http://localhost:8761}/eureka/
   instance:
-    health-check-url: ${management.server.servlet.context-path}/health
-    status-page-url-path: ${management.server.servlet.context-path}/info
+    leaseRenewalIntervalInSeconds: 10
+    health-check-url-path: /actuator/health
+    hostname: erurka
+    prefer-ip-address: true
 
 management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
   endpoint:
-    auditevents:
-      enabled: true
-  server:
-    servlet:
-      context-path: management
+    health:
+      show-details: ALWAYS
 
