--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>zuul</module>
         <module>service</module>
         <module>common</module>
+        <module>admin</module>
     </modules>
 
     <parent>
@@ -23,6 +24,8 @@
     </parent>
 
     <properties>
+        <spring-boot-admin.version>2.0.1</spring-boot-admin.version>
+
         <springfox-swagger2.version>2.9.2</springfox-swagger2.version>
         <spring-boot.version>2.0.3.RELEASE</spring-boot.version>
 
@@ -37,6 +40,13 @@
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
                 <version>Finchley.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>de.codecentric</groupId>
+                <artifactId>spring-boot-admin-dependencies</artifactId>
+                <version>${spring-boot-admin.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
