--- a/service/message/src/main/resources/config/application-dev.yml
+++ b/service/message/src/main/resources/config/application-dev.yml
@@ -3,10 +3,23 @@ server:
 spring:
   profiles:
     active: dev
+
 eureka:
   client:
-    enabled: true
+    registryFetchIntervalSeconds: 30
     service-url:
-      default-zone: http://localhost:8761/eureka/
+      default-zone: ${EUREKA_SERVICE_URL:http://localhost:8761}/eureka/
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: ALWAYS
+
+
+
 
 
