--- a/service/message/src/main/resources/config/application-prod.yml
+++ b/service/message/src/main/resources/config/application-prod.yml
@@ -3,10 +3,18 @@ server:
 spring:
   profiles:
     active: prod
+
 eureka:
   client:
     enabled: true
     service-url:
-      default-zone: http://localhost:8761/eureka/
+      default-zone: ${EUREKA_SERVICE_URL:http://localhost:8761}/eureka/
 
-
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: ALWAYS
