--- a/zuul/src/main/resources/config/application-dev.yml
+++ b/zuul/src/main/resources/config/application-dev.yml
@@ -2,17 +2,19 @@ server:
   port:
     50000
 spring:
-  application:
-    name: zuul
   profiles:
     active: dev
 
 eureka:
   client:
     service-url:
-      default-zone: http://localhost:8761/eureka/
-#
-#logging:
-#  config: logback-spring.xml
-#  file: /keep-cloud/log/zuul.log
-#    max-size: 50M
+      default-zone: ${EUREKA_SERVICE_URL:http://localhost:8761}/eureka/
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: ALWAYS
