--- a/zuul/src/main/resources/config/application-prod.yml
+++ b/zuul/src/main/resources/config/application-prod.yml
@@ -8,6 +8,11 @@ spring:
     active: prod
 
 eureka:
+  instance:
+    leaseRenewalIntervalInSeconds: 10
+    health-check-url-path: /actuator/health
+    hostname: zuul
+    prefer-ip-address: true
   client:
     service-url:
-      default-zone: http://localhost:8761/eureka/
+      default-zone: ${EUREKA_SERVICE_URL:http://localhost:8761}/eureka/
