--- a/zuul/src/main/resources/config/application-prod.yml
+++ b/zuul/src/main/resources/config/application-prod.yml
@@ -6,13 +6,19 @@ spring:
     name: zuul
   profiles:
     active: prod
+  security:
+    user:
+      password: zuul
+      name: zuul
 
 eureka:
   instance:
-    leaseRenewalIntervalInSeconds: 10
+    leaseRenewalIntervalInSeconds: 30
     health-check-url-path: /actuator/health
-    hostname: zuul
-    prefer-ip-address: true
+    metadata-map:
+      user:
+        name: ${spring.security.user.name}
+        password: ${spring.security.user.password}
   client:
     service-url:
       default-zone: ${EUREKA_SERVICE_URL:http://localhost:8761}/eureka/
