--- a/admin/src/main/resources/config/application.yml
+++ b/admin/src/main/resources/config/application.yml
@@ -1,25 +1,5 @@
-server:
-  port: 8762
-
 spring:
   application:
     name: admin
-#  boot:
-#    admin:
-#      client:
-#        url: "http://localhost:8762"
-#        enabled: true
-
-eureka:
-  client:
-    service-url:
-      default-zone: ${EUREKA_SERVICE_URL:http://localhost:8761}/eureka/
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
-  endpoint:
-    health:
-      show-details: ALWAYS
+  profiles:
+    active: @spring.profiles.active@
