--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -11,10 +11,9 @@
 
     <artifactId>keep-cloud-domain</artifactId>
 
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <dependencies>
-        <!--lombok-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -44,8 +43,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>${java.version}</source>
                     <target>${java.version}</target>
+                    <source>${java.version}</source>
                 </configuration>
             </plugin>
         </plugins>
