--- a/eureka/src/main/resources/config/application-prod.yml
+++ b/eureka/src/main/resources/config/application-prod.yml
@@ -4,11 +4,10 @@ server:
 spring:
   profiles:
     active: prod
-  boot:
-    admin:
-      client:
-        url: "http://localhost:8762"
-        enabled: true
+  security:
+    user:
+      name: eureka
+      password: eureka
 
 eureka:
   client:
@@ -19,8 +18,10 @@ eureka:
   instance:
     leaseRenewalIntervalInSeconds: 10
     health-check-url-path: /actuator/health
-    hostname: erurka
-    prefer-ip-address: true
+    metadata-map:
+      user:
+        name: ${spring.security.user.name}
+        password: ${spring.security.user.password}
 
 management:
   endpoints:
