--- a/service/common/src/main/resources/config/application-prod.yml
+++ b/service/common/src/main/resources/config/application-prod.yml
@@ -3,8 +3,17 @@ server:
 spring:
   profiles:
     active: prod
+  security:
+    user:
+      name: common
+      password: common
 
 eureka:
+  instance:
+    metadata-map:
+      user:
+        name: ${spring.security.user.name}
+        password: ${spring.security.user.password}
   client:
     enabled: true
     service-url:
