--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson.version}</version>
+        </dependency>
         <!--spring data jpa-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
