--- a/service/manage/pom.xml
+++ b/service/manage/pom.xml
@@ -70,6 +70,17 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!--redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <!--redis所需-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>${commons-pool2.version}</version>
+        </dependency>
 
     </dependencies>
 
