--- a/service/manage/src/main/resources/config/application-dev.yml
+++ b/service/manage/src/main/resources/config/application-dev.yml
@@ -17,6 +17,18 @@ spring:
       ddl-auto: validate
     show-sql: true
     database-platform: org.hibernate.dialect.MySQL5Dialect
+  redis:
+    database: 0
+    host: 39.107.125.86
+    port: 6379
+    password: Redis123456!
+    jedis:
+      pool:
+        max-active: 8
+        max-wait: 5000ms
+        max-idle: 8
+        min-idle: 0
+    timeout: 10000ms
 
 eureka:
   instance:
